; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_ConvertTokenToOnOff.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_ConvertTokenToOnOff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@OnOffKeyWords = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ConvertTokenToOnOff(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [256 x i8], align 16
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @StrLenUpToWhiteChar(i32 %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i64 %9, i64* %7, align 8
  %10 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %11 = load i32, i32* %4, align 4
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @PICE_strncpy(i8* %10, i32 %11, i64 %12)
  %14 = load i64, i64* %7, align 8
  %15 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 %14
  store i8 0, i8* %15, align 1
  %16 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @OnOffKeyWords, align 4
  %19 = call i64 @ReplaceKeywordWithValue(i8* %16, i32 %17, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %25

23:                                               ; preds = %2
  %24 = load i32, i32* @FALSE, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @StrLenUpToWhiteChar(i32, i8*) #1

declare dso_local i32 @PICE_strncpy(i8*, i32, i64) #1

declare dso_local i64 @ReplaceKeywordWithValue(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
